--- a/quantum_battery.ipynb
+++ b/quantum_battery.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Quantum Battery project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Step 1. Run below cell to import all package."
    ]
   },
@@ -17,10 +24,12 @@
     "from qsee.compilation.qsp import QuantumStatePreparation\n",
     "from qsee.core import ansatz, state, gradient, optimizer\n",
     "from qsee.backend import constant, utilities\n",
+    "from mpl_toolkits import mplot3d\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import base.object\n",
+    "import base.Gradient\n",
     "import base.circuit\n",
+    "import base.object\n",
     "import numpy as np, qiskit\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -55,9 +64,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = 10\n",
+    "num_qubits = 2\n",
+    "thetas = np.random.rand(2*(num_qubits-1))*2*np.pi\n",
+    "thetasmax,thetass=base.Gradient.gradient_descent(num_qubits,t,thetas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def test(num_qubits, t1,thetas,shots):\n",
     "    \"\"\"\n",
-    "        Return array time , W , P\n",
     "\n",
     "        INPUT:\n",
     "          t: time\n",
@@ -68,7 +88,6 @@
     "    time=np.linspace(0,t1,shots)\n",
     "    arrayW=[]\n",
     "    arrayP=[]\n",
-    "\n",
     "    for t in time:\n",
     "        w = base.object.E(num_qubits, t,thetas) - base.object.E(num_qubits, 0,thetas)\n",
     "        if(t!=0):\n",
@@ -77,41 +96,14 @@
     "            p = 0\n",
     "        arrayW.append(w)\n",
     "        arrayP.append(p)\n",
-    "\n",
-    "    return time,arrayW,arrayP\n",
-    "max_values = []\n",
-    "max_indices = []\n",
-    "t = 10\n",
-    "num_qubits = 2\n",
-    "fig, axs = plt.subplots(10, 10, figsize=(50, 50))\n",
-    "\n",
-    "count=0\n",
-    "for i in range(10):\n",
-    "    for j in range(10):\n",
-    "        count=count+1\n",
-    "        thetas = np.random.rand(2*(num_qubits-1))* 2 * np.pi\n",
-    "        ltime, arrayW, arrayP = test(num_qubits, t, thetas, 100)\n",
-    "        index = i * 10 + j\n",
-    "        max_value = np.max(arrayP)\n",
-    "        max_index = np.argmax(arrayP)  \n",
-    "        axs[i, j].plot(ltime, arrayP, label=f\"Power {count} \")\n",
-    "        axs[i, j].scatter(ltime[max_index], max_value, color='red', label=f\"Max: {np.round(max_value, 2)}\")\n",
-    "        axs[i, j].set_xlabel('Time')\n",
-    "        axs[i, j].set_ylabel('Value')\n",
-    "        axs[i, j].legend(prop={'size': 20})\n",
-    "        \n",
-    "        max_values.append(max_value)\n",
-    "        max_indices.append(ltime[max_index])\n",
-    "max_P = np.max(max_values)\n",
-    "max_Pindex = np.argmax(max_values)\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "directory = 'imageresult'\n",
-    "if not os.path.exists(directory):\n",
-    "    os.makedirs(directory)\n",
-    "plt.savefig(os.path.join(directory, f'2QUBIT_100IMAGE(1).pdf'), format='pdf')\n",
-    "plt.show()\n",
-    "print(f\"Đồ thị {max_Pindex+1}: P_MAX = {max_P}, t = {max_indices[max_Pindex]}\")"
+    "    return time,arrayP,arrayW\n",
+    "ltime,lP,lW=test(num_qubits,t,thetasmax)\n",
+    "plt.plot(ltime, lW, label=\"Work\")\n",
+    "plt.plot(ltime, lP, label=\"Power\")\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Value')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
@@ -131,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
