--- a/calculate_energy.ipynb
+++ b/calculate_energy.ipynb
@@ -25,45 +25,10 @@
     "import base.object\n",
     "import base.hamiltonian\n",
     "import numpy as np, qiskit\n",
-    "from scipy.signal import find_peaks\n",
+    "\n",
     "from matplotlib.ticker import FuncFormatter\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def grad_Pmax(num_qubits, tmax, thetas, h1, gamma = 0):\n",
-    "    psi_t = base.object.psi_t(num_qubits, tmax, h1)\n",
-    "    h0 = base.hamiltonian.h0(num_qubits)\n",
-    "    grad = np.zeros(len(thetas), dtype=np.complex128)\n",
-    "    for i in range(num_qubits - 1):\n",
-    "        Pi = (1 + gamma) * base.hamiltonian.Pi(num_qubits, 'XX', i) + (1 - gamma) * base.hamiltonian.Pi(num_qubits, 'YY', i)\n",
-    "        grad[i] = 1j * tmax * (np.transpose(np.conjugate(psi_t)) @ (np.transpose(np.conjugate(Pi)) @ h0 - h0 @ Pi) @ psi_t)[0,0]\n",
-    "    if len(thetas) > num_qubits - 1:\n",
-    "        for i in range(num_qubits - 1):\n",
-    "            Pi = base.hamiltonian.Pi(num_qubits, 'ZZ', i)  \n",
-    "            grad[i + num_qubits - 1] = 1j * tmax * (np.transpose(np.conjugate(psi_t)) @ (np.transpose(np.conjugate(Pi)) @ h0 - h0 @ Pi) @ psi_t)[0,0]\n",
-    "    return grad\n",
-    "\n",
-    "\n",
-    "def find_Pmax(num_qubits, h1, t = 2, delta_t = 0.01, auto_stop = True):\n",
-    "    Ps = []\n",
-    "    ts = np.arange(0, t, delta_t)\n",
-    "    for t in ts:\n",
-    "        P = base.object.P(num_qubits, t, h1)\n",
-    "        Ps.append(P)\n",
-    "        peaks, _ = find_peaks(Ps)\n",
-    "        if len(peaks) == 1 and auto_stop:\n",
-    "            break\n",
-    "    Pmax = np.max(Ps)\n",
-    "    tmax = ts[np.argmax(Ps)]\n",
-    "    return Ps, Pmax, tmax"
    ]
   },
   {
@@ -96,7 +61,7 @@
     "        thetas -= 1 * grad_C\n",
     "    thetas_opt.append(thetas)\n",
     "    Pmaxss.append(Pmaxs)\n",
-    "    \n",
+    "    plt.plot(range(0, num_iteration), Pmaxs, label=f\"Pmaxs at {num_qubits} qubits\")\n",
     "def format_func(value, tick_number):\n",
     "    # transform the value to your desired format\n",
     "    return f'{value / 100:.0f}'"
