--- a/quantum_battery.ipynb
+++ b/quantum_battery.ipynb
@@ -29,29 +29,13 @@
     }
    ],
    "source": [
-    "from qsee.compilation.qsp import QuantumStatePreparation\n",
-    "from qsee.core import ansatz, state, gradient, optimizer\n",
-    "from qsee.backend import constant, utilities\n",
-    "from mpl_toolkits import mplot3d\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
     "import base.gradient\n",
     "import base.object\n",
     "import base.hamiltonian\n",
-    "import numpy as np, qiskit\n",
     "import numpy as np\n",
-    "from scipy.signal import find_peaks\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c"
    ]
   },
   {
@@ -496,7 +480,6 @@
    "source": [
     "\n",
     "for num_qubits in [2,3,4]:\n",
-    "    # num_qubits = 2\n",
     "    thetas = np.ones(num_qubits - 1)\n",
     "    thetas = thetas.astype(np.complex128)\n",
     "    Pmaxs = []\n",
@@ -504,16 +487,10 @@
     "    num_iteration = 10000\n",
     "    for i in range(0, num_iteration):\n",
     "        h1 = base.hamiltonian.h1_xx(num_qubits, thetas)\n",
-    "        _, Pmax, tmax = find_Pmax(num_qubits, h1)\n",
+    "        _, Pmax, tmax = base.gradient.find_Pmax(num_qubits, h1)\n",
     "        Pmaxs.append(Pmax)\n",
     "        tmaxs.append(tmax)\n",
-    "        # grad_C = -grad_Pmax\n",
-    "        grad_C = grad_Pmax(num_qubits, tmax, thetas, h1)\n",
-    "        # if i == 0:\n",
-    "        #     m, v1 = list(np.zeros(thetas.shape[0])), list(\n",
-    "        #         np.zeros(thetas.shape[0]))\n",
-    "        # optimizer_params = [m, v1, i, grad_C]\n",
-    "        # thetas = optimizer.adam(thetas, *optimizer_params)\n",
+    "        grad_C = base.gradient.grad_Pmax(num_qubits, tmax, thetas, h1)\n",
     "        thetas -= 1 * grad_C\n",
     "        if i % 100 == 0:\n",
     "            print(grad_C)\n",
@@ -1173,11 +1150,11 @@
     "    num_iteration = 10000\n",
     "    for i in range(0, num_iteration):\n",
     "        h1 = base.hamiltonian.h1_xy(num_qubits, thetas, gamma)\n",
-    "        _, Pmax, tmax = find_Pmax(num_qubits, h1)\n",
+    "        _, Pmax, tmax = base.gradient.find_Pmax(num_qubits, h1)\n",
     "        Pmaxs.append(Pmax)\n",
     "        tmaxs.append(tmax)\n",
     "        # grad_C = -grad_Pmax\n",
-    "        grad_C = grad_Pmax(num_qubits, tmax, thetas, h1, gamma)\n",
+    "        grad_C = base.gradient.grad_Pmax(num_qubits, tmax, thetas, h1, gamma)\n",
     "        # if i == 0:\n",
     "        #     m, v1 = list(np.zeros(thetas.shape[0])), list(\n",
     "        #         np.zeros(thetas.shape[0]))\n",
@@ -11243,20 +11220,11 @@
     "    num_iteration = 10000\n",
     "    for i in range(0, num_iteration):\n",
     "        h1 = base.hamiltonian.h1_xxz(num_qubits, thetas)\n",
-    "        _, Pmax, tmax = find_Pmax(num_qubits, h1)\n",
+    "        _, Pmax, tmax = base.gradient.find_Pmax(num_qubits, h1)\n",
     "        Pmaxs.append(Pmax)\n",
     "        tmaxs.append(tmax)\n",
-    "        # grad_C = -grad_Pmax\n",
-    "        grad_C = grad_Pmax(num_qubits, tmax, thetas, h1)\n",
-    "        # if i == 0:\n",
-    "        #     m, v1 = list(np.zeros(thetas.shape[0])), list(\n",
-    "        #         np.zeros(thetas.shape[0]))\n",
-    "        # optimizer_params = [m, v1, i, grad_C]\n",
-    "        # thetas = optimizer.adam(thetas, *optimizer_params)\n",
+    "        grad_C = base.gradient.grad_Pmax(num_qubits, tmax, thetas, h1)\n",
     "        thetas -= 1 * grad_C\n",
-    "\n",
-    "        print(grad_C)\n",
-    "    \n",
     "    plt.plot(range(0, num_iteration), Pmaxs, label=f\"Pmaxs at {num_qubits} qubits\")\n",
     "print(tmax)\n",
     "plt.xlabel(\"# iteration\")\n",
