--- a/calculate_energy.ipynb
+++ b/calculate_energy.ipynb
@@ -15,9 +15,9 @@
     }
    ],
    "source": [
-    "from qsee.compilation.qsp import QuantumStatePreparation\n",
-    "from qsee.core import ansatz, state, gradient, optimizer\n",
-    "from qsee.backend import constant, utilities\n",
+    "from qoop.compilation.qsp import QuantumStatePreparation\n",
+    "from qoop.core import ansatz, state, gradient, optimizer\n",
+    "from qoop.backend import constant, utilities\n",
     "from mpl_toolkits import mplot3d\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
